test/typechecker.d/invalid/match7.surc
match2(dox: Integer) = match 4
	'a' -> 4
	dum -> 4
